Make invisible mixins more visible, to avoid clash outside the scope

--- a/stylus/base/helpers.styl
+++ b/stylus/base/helpers.styl
@@ -102,7 +102,7 @@ for $name, $pair in $colors
   a.has-text-{$name}
     &:hover,
     &:focus
-      color darken($color, 10%) !important
+      color bulma-stylus-darken($color, 10%) !important
   .has-background-{$name}
     background-color $color !important
 
