--- a/stylus/components/navbar.styl
+++ b/stylus/components/navbar.styl
@@ -72,7 +72,7 @@ navbar-fixed()
           &:focus,
           &:hover,
           &.is-active
-            background-color darken($color, 5%)
+            background-color bulma-stylus-darken($color, 5%)
             color $color-invert
         .navbar-link
           &::after
@@ -90,7 +90,7 @@ navbar-fixed()
             &:focus,
             &:hover,
             &.is-active
-              background-color darken($color, 5%)
+              background-color bulma-stylus-darken($color, 5%)
               color $color-invert
           .navbar-link
             &::after
@@ -98,7 +98,7 @@ navbar-fixed()
         .navbar-item.has-dropdown:focus .navbar-link,
         .navbar-item.has-dropdown:hover .navbar-link,
         .navbar-item.has-dropdown.is-active .navbar-link
-          background-color darken($color, 5%)
+          background-color bulma-stylus-darken($color, 5%)
           color $color-invert
         .navbar-dropdown
           a.navbar-item
