--- a/stylus/elements/tag.styl
+++ b/stylus/elements/tag.styl
@@ -117,9 +117,9 @@ $tag-delete-margin ?= 1px
       width 1px
     &:hover,
     &:focus
-      background-color darken($tag-background-color, 5%)
+      background-color bulma-stylus-darken($tag-background-color, 5%)
     &:active
-      background-color darken($tag-background-color, 10%)
+      background-color bulma-stylus-darken($tag-background-color, 10%)
   &.is-rounded
     border-radius $radius-rounded
 
