--- a/stylus/form/select.styl
+++ b/stylus/form/select.styl
@@ -48,7 +48,7 @@
         border-color $color
         &:hover,
         &.is-hovered
-          border-color darken($color, 5%)
+          border-color bulma-stylus-darken($color, 5%)
         &:focus,
         &.is-focused,
         &:active,
