--- a/stylus/layout/hero.styl
+++ b/stylus/layout/hero.styl
@@ -37,7 +37,7 @@
       .navbar-link
         &:hover,
         &.is-active
-          background-color darken($color, 5%)
+          background-color bulma-stylus-darken($color, 5%)
           color $color-invert
       .tabs
         a
@@ -62,8 +62,8 @@
               color $color
       // Modifiers
       &.is-bold
-        $gradient-top-left = darken(saturate(spin($color, -10deg), 10%), 10%)
-        $gradient-bottom-right = lighten(saturate(spin($color, 10deg), 5%), 5%)
+        $gradient-top-left = bulma-stylus-darken(bulma-stylus-saturate(spin($color, -10deg), 10%), 10%)
+        $gradient-bottom-right = bulma-stylus-lighten(bulma-stylus-saturate(spin($color, 10deg), 5%), 5%)
         background-image linear-gradient(141deg, $gradient-top-left 0%, $color 71%, $gradient-bottom-right 100%)
         +mobile()
           .navbar-menu
